@@ -6,4 +6,4 @@ tar --exclude-vcs -czvf mitsuba-$1.tar.gz ChangeLog README SConstruct \
 	src/shapes/ src/subsurface/ src/textures/ src/utils/ src/volume/ src/integrators/direct src/integrators/misc \
 	src/integrators/path src/integrators/photonmapper src/integrators/vpl tools/boost tools/darwin \
 	tools/build.sh tools/scons-1.2.0 tools/windows tools/linux/*.sh tools/linux/mitsuba.desktop tools/qt4.py \
-	tools/build.bat setpath.sh
+	tools/build.bat doc/license.txt setpath.sh
